@@ -14,7 +14,7 @@ PRINT a$,b$
 'LINEINPUT #F, a$
 CLOSE #F
 
-' 
+'
 PRINT "I read: [";a$;"]+[";b$;"]"
 
 ' Append test
@@ -30,6 +30,13 @@ WHILE NOT EOF(F)
 WEND
 CLOSE #F
 
-
+# find main.c in the console folder
+has_main = false
+func walker(node)
+  if (node.name == "main.c") then has_main=true
+  return 1
+end
+dirwalk "./", "*.c" use walker(x)
+if (!has_main) then throw "dirwalk error"
 
 
