@@ -297,9 +297,9 @@ void cmd_fread() {
     if (dev_fstatus(handle)) {
       // get the variables
       do {
-        if (prog_error)
+        if (prog_error) {
           return;
-
+        }
         // get variable's ptr
         var_t *var_p = par_getvar_ptr();
         if (prog_error) {
@@ -327,9 +327,6 @@ void cmd_fread() {
  * LINE INPUT [#fileN;] var$
  */
 void cmd_flineinput() {
-  var_t *var_p;
-  byte code, ch;
-
   if (code_peek() == kwTYPE_SEP) {
     //
     // FILE OR DEVICE
@@ -345,16 +342,18 @@ void cmd_flineinput() {
         if (!prog_error) {
           if (dev_fstatus(handle)) {
             // get the variable
-            code = code_peek();
+            byte code = code_peek();
             if (code != kwTYPE_VAR) {
               err_syntax(kwLINEINPUT, "%P");
               return;
             }
-            var_p = code_getvarptr();
+            var_t *var_p = code_getvarptr();
             if (!prog_error) {
               v_free(var_p);
               int size = 256;
               int index = 0;
+              byte ch;
+
               var_p->type = V_STR;
               var_p->v.p.ptr = malloc(size);
 
@@ -393,7 +392,7 @@ void cmd_flineinput() {
     //
     // CONSOLE
     //
-    var_p = par_getvar_ptr();
+    var_t *var_p = par_getvar_ptr();
     if (!prog_error) {
       v_free(var_p);
       var_p->type = V_STR;
@@ -414,12 +413,12 @@ void cmd_fkill() {
   // filename
   v_init(&file_name);
   par_getstr(&file_name);
-  if (prog_error)
+  if (prog_error) {
     return;
-  if (dev_fexists((char *)file_name.v.p.ptr))
+  }
+  if (dev_fexists((char *)file_name.v.p.ptr)) {
     dev_fremove((char *)file_name.v.p.ptr);
-  // else
-  // rt_raise("KILL: FILE DOES NOT EXIST");
+  }
   v_free(&file_name);
 }
 
@@ -433,8 +432,9 @@ void cmd_filecp(int mv) {
   v_init(&src);
   v_init(&dst);
   par_getstr(&src);
-  if (prog_error)
+  if (prog_error) {
     return;
+  }
   par_getcomma();
   if (prog_error) {
     v_free(&src);
@@ -468,8 +468,9 @@ void cmd_chdir() {
   // filename
   v_init(&dir);
   par_getstr(&dir);
-  if (prog_error)
+  if (prog_error) {
     return;
+  }
   dev_chdir((char *)dir.v.p.ptr);
   v_free(&dir);
 }
@@ -483,8 +484,9 @@ void cmd_rmdir() {
   // filename
   v_init(&dir);
   par_getstr(&dir);
-  if (prog_error)
+  if (prog_error) {
     return;
+  }
   dev_rmdir((char *)dir.v.p.ptr);
   v_free(&dir);
 }
@@ -498,8 +500,9 @@ void cmd_mkdir() {
   // filename
   v_init(&dir);
   par_getstr(&dir);
-  if (prog_error)
+  if (prog_error) {
     return;
+  }
   dev_mkdir((char *)dir.v.p.ptr);
   v_free(&dir);
 }
@@ -735,8 +738,9 @@ void cmd_flock() {
   var_t str;
 
   par_getstr(&str);
-  if (prog_error)
+  if (prog_error) {
     return;
+  }
   v_free(&str);
 }
 
@@ -745,17 +749,17 @@ void cmd_flock() {
  */
 void cmd_chmod() {
   var_t str;
-  uint32_t mode;
 
   par_getstr(&str);
-  if (prog_error)
+  if (prog_error) {
     return;
+  }
   par_getcomma();
   if (prog_error) {
     v_free(&str);
     return;
   }
-  mode = par_getint();
+  uint32_t mode = par_getint();
   if (prog_error) {
     v_free(&str);
     return;
@@ -765,48 +769,87 @@ void cmd_chmod() {
   v_free(&str);
 }
 
+void join_path(char *path, char *ext) {
+  int len = strlen(path);
+  if (path[len - 1] != OS_DIRSEP) {
+    if (ext[0] != OS_DIRSEP) {
+      strcat(path, "/");
+      strcat(path, ext);
+    } else {
+      strcat(path, ext);
+    }
+  } else {
+    if (ext[0] != OS_DIRSEP) {
+      strcat(path, ext);
+    } else {
+      strcat(path, ext + 1);
+    }
+  }
+}
+
 /*
  * walk on dirs
  */
-void dirwalk(char *dir, char *wc, bcip_t use_ip) {
-  char name[OS_PATHNAME_SIZE];
-  struct dirent *dp;
-  DIR *dfd;
-  struct stat st;
-  int callusr, contf = 1;
+void dirwalk(char *dir, char *wc, bcip_t use_ip, int depth) {
+  char path[OS_PATHNAME_SIZE];
+  path[0] = '\0';
+  if (dir[0] == '.') {
+    getcwd(path, OS_PATHNAME_SIZE - 1);
+    join_path(path, ++dir);
+    dir = path;
+  } else if (dir[0] == '~') {
+    strcpy(path, getenv("HOME"));
+    join_path(path, ++dir);
+    dir = path;
+  }
 
-  if ((dfd = opendir(dir)) == NULL) {
+  DIR *dfd = opendir(dir);
+  if (dfd == NULL) {
     log_printf("DIRWALK: can't open %s", dir);
     return;
   }
 
+  struct dirent *dp;
   while ((dp = readdir(dfd)) != NULL) {
-    if (strcmp(dp->d_name, ".") == 0 || strcmp(dp->d_name, "..") == 0) {
-      continue; /* skip self and parent */
+    if (dev_events(0) != 0) {
+      break;
     }
-    if (strlen(dir) + strlen(dp->d_name) + 2 > sizeof(name)) {
+    if (strcmp(dp->d_name, ".") == 0 || strcmp(dp->d_name, "..") == 0) {
+      // skip self and parent
+      continue;
+    }
+    if (strlen(dir) + strlen(dp->d_name) + 2 > OS_PATHNAME_SIZE) {
       rt_raise("DIRWALK: name %s/%s too long", dir, dp->d_name);
     }
     else {
-      sprintf(name, "%s%c%s", dir, OS_DIRSEP, dp->d_name);
+      // check filename
+      int callusr;
+      int contf = 1;
+      struct stat st;
 
-      /*
-       *   check filename
-       */
       if (!wc) {
         callusr = 1;
       }
       else {
         callusr = wc_match(wc, dp->d_name);
       }
-      if (callusr) {
-        /*
-         *   call user's function
-         */
-        var_t *var;
 
-        var = v_new();
-        v_createstr(var, name);
+      char name[OS_PATHNAME_SIZE];
+      strcpy(name, dir);
+      join_path(name, dp->d_name);
+
+      if (callusr) {
+        // call user's function
+        var_t *var = v_new();
+        map_init(var);
+        v_setstr(map_add_var(var, "path", 0), dir);
+        v_setstr(map_add_var(var, "name", 0), dp->d_name);
+        map_add_var(var, "depth", depth);
+        if (stat(name, &st) != -1) {
+          map_add_var(var, "mtime", st.st_mtime);
+          map_add_var(var, "size", st.st_size);
+          map_add_var(var, "dir", (st.st_mode & S_IFDIR) ? 1 : 0);
+        }
         exec_usefunc(var, use_ip);
         contf = v_getint(var);
         v_free(var);
@@ -815,13 +858,13 @@ void dirwalk(char *dir, char *wc, bcip_t use_ip) {
       if (!contf) {
         break;
       }
-      /*
-       *   proceed to the next
-       */
-      if (access(name, R_OK) == 0) {  // user-func, possible it is deleted
+
+      // proceed to the next
+      if (access(name, R_OK) == 0) {
+        // user-func, possible it is deleted
         stat(name, &st);
         if (st.st_mode & S_IFDIR) {
-          dirwalk(name, wc, use_ip);
+          dirwalk(name, wc, use_ip, depth + 1);
         }
       }
     }
@@ -835,11 +878,11 @@ void dirwalk(char *dir, char *wc, bcip_t use_ip) {
  * DIRWALK "/home" [, "*"] USE MYPRN(x)
  */
 void cmd_dirwalk() {
-  bcip_t use_ip, exit_ip;
   char *dir = NULL, *wc = NULL;
 
   par_massget("Ss", &dir, &wc);
   if (!prog_error) {
+    bcip_t use_ip, exit_ip;
 
     // USE
     if (code_peek() == kwUSE) {
@@ -849,7 +892,7 @@ void cmd_dirwalk() {
     } else {
       use_ip = exit_ip = INVALID_ADDR;
     }
-    dirwalk(dir, wc, use_ip);
+    dirwalk(dir, wc, use_ip, 0);
 
     if (exit_ip != INVALID_ADDR) {
       code_jump(exit_ip);
@@ -897,7 +940,7 @@ void cmd_bputc() {
  * BLOAD file[, offset]
  */
 void cmd_bload() {
-  var_int_t ofs = -1, idata;
+  var_int_t ofs = -1;
   char *fname = NULL;
 
   par_massget("Si", &fname, &ofs);
@@ -911,6 +954,7 @@ void cmd_bload() {
         dev_fopen(handle, fname, flags);
         if (!prog_error) {
           var_int_t *data;
+          var_int_t idata;
 
           dev_fread(handle, (byte *)&idata, sizeof(idata));
           if (ofs == -1) {
@@ -945,11 +989,9 @@ void cmd_bsave() {
       if (dev_fstatus(handle) == 0) {
         dev_fopen(handle, fname, flags);
         if (!prog_error) {
-          var_int_t *data;
-
           dev_fwrite(handle, (byte *)&ofs, sizeof(ofs));
           dev_fwrite(handle, (byte *)&len, sizeof(len));
-          data = &ofs;
+          var_int_t *data = &ofs;
           dev_fwrite(handle, (byte *)data, len);
           dev_fclose(handle);
         }
